--- a/css/admin.css
+++ b/css/admin.css
@@ -133,3 +133,12 @@ table tr td{
     background-color: #ff4757;
     color: white;
 }
+
+/* css for login*/
+
+.login{
+    border: 1px solid gray;
+    width: 30%;
+    margin: 10% auto;
+    padding: 2%;
+}   
